--- a/snippets/package.json
+++ b/snippets/package.json
@@ -20,6 +20,10 @@
       {
         "language": "typescriptreact",
         "path": "./react-ts.json"
+      },
+      {
+        "language": "javascript",
+        "path": "./javascript.json"
       }
     ]
   }
